--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -9,11 +9,11 @@ body {
 }
 .display-1 {
   font-family: 'Jost', sans-serif;
-  font-size: 5.5rem;
+  font-size: 4.4rem;
   line-height: 1.2;
 }
 .display-1 > .mbr-iconfont {
-  font-size: 8.8rem;
+  font-size: 7.04rem;
 }
 .display-2 {
   font-family: 'Jost', sans-serif;
@@ -33,11 +33,11 @@ body {
 }
 .display-5 {
   font-family: 'Jost', sans-serif;
-  font-size: 1.9rem;
+  font-size: 1.2rem;
   line-height: 1.4;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 3.04rem;
+  font-size: 1.92rem;
 }
 .display-7 {
   font-family: 'Jost', sans-serif;
@@ -54,9 +54,9 @@ body {
 /* 0.65 - min scale variable, may vary */
 @media (max-width: 768px) {
   .display-1 {
-    font-size: 3.85rem;
-    font-size: calc( 2.5749999999999997rem + (5.5 - 2.5749999999999997) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.1 * (2.5749999999999997rem + (5.5 - 2.5749999999999997) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 3.08rem;
+    font-size: calc( 2.19rem + (4.4 - 2.19) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.1 * (2.19rem + (4.4 - 2.19) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
     font-size: 2.24rem;
@@ -69,9 +69,9 @@ body {
     line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.52rem;
-    font-size: calc( 1.315rem + (1.9 - 1.315) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.315rem + (1.9 - 1.315) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.96rem;
+    font-size: calc( 1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-7 {
     font-size: 0.96rem;
@@ -1145,24 +1145,24 @@ a {
   width: fit-content;
   transition: all 0.3s;
 }
-.cid-s1YLYYtmhw {
-  padding-top: 120px;
-  padding-bottom: 90px;
-  background-color: #000000;
+.cid-s7RJA2rEmK {
+  padding-top: 135px;
+  padding-bottom: 120px;
+  background-color: #040402;
 }
-.cid-s1YLYYtmhw H1 {
+.cid-s7RJA2rEmK H1 {
   color: #e2090d;
 }
-.cid-s1YLYYtmhw h1 {
+.cid-s7RJA2rEmK h1 {
   background: linear-gradient(to left, #fc5130, currentColor);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.cid-s1YLYYtmhw img {
+.cid-s7RJA2rEmK img {
   width: 100%;
 }
-.cid-s1YLYYtmhw .mbr-text,
-.cid-s1YLYYtmhw .mbr-section-btn {
+.cid-s7RJA2rEmK .mbr-text,
+.cid-s7RJA2rEmK .mbr-section-btn {
   color: #999999;
 }
 .cid-s1YM3FtOOn {
@@ -1256,6 +1256,164 @@ a {
     max-width: 20%;
   }
 }
+.cid-s7KviYfvdv {
+  padding-top: 60px;
+  padding-bottom: 75px;
+  background-color: #111111;
+}
+.cid-s7KviYfvdv .card-wrapper {
+  display: flex;
+  padding: 0 1.5rem;
+}
+@media (max-width: 1600px) {
+  .cid-s7KviYfvdv .card-wrapper {
+    padding: 0;
+  }
+}
+.cid-s7KviYfvdv .content {
+  padding: 0 3rem;
+}
+@media (max-width: 1600px) {
+  .cid-s7KviYfvdv .content {
+    padding: 0 1rem;
+  }
+}
+.cid-s7KviYfvdv .img-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+.cid-s7KviYfvdv .img-wrapper:before {
+  content: '';
+  position: absolute;
+  width: 600px;
+  height: 600px;
+  right: -300px;
+  border-radius: 50%;
+  bottom: -350px;
+  opacity: 0.3;
+  background: #e2090d;
+  z-index: 2;
+  pointer-events: none;
+}
+.cid-s7KviYfvdv img {
+  width: 100%;
+}
+.cid-s7KviYfvdv .card-wrapper .mbr-iconfont {
+  font-size: 3rem;
+  background: linear-gradient(to left, #fc5130, #e2090d);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.cid-s7KviYfvdv .line {
+  width: 55px;
+  margin-bottom: 0.5rem;
+  height: 5px;
+  display: inline-block;
+  background: linear-gradient(to left, #fc5130, #e2090d);
+}
+.cid-s7KviYfvdv .icon-wrapper {
+  margin: auto;
+  margin-right: 1.5rem;
+  display: flex;
+  justify-content: center;
+  border-radius: 50%;
+}
+.cid-s7KviYfvdv h4 {
+  margin: 0;
+}
+.cid-s7KviYfvdv .card-text {
+  color: #999999;
+}
+.cid-s7KviYfvdv .mbr-text {
+  color: #000000;
+}
+.cid-s7KviYfvdv .card-title {
+  color: #ffffff;
+}
+@media (min-width: 1200px) {
+  .cid-s7KviYfvdv .mbr-text {
+    max-width: 600px;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s7KviYfvdv .card-wrapper {
+    flex-direction: column;
+    margin: auto;
+    text-align: center;
+  }
+  .cid-s7KviYfvdv .card-wrapper .icon-wrapper {
+    margin: 0 auto;
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-s7KviYfvdv .mbr-text {
+    padding-bottom: 2rem;
+    max-width: 100%;
+  }
+}
+.cid-s7KviYfvdv .icon-wrap {
+  background: linear-gradient(to left, #fc5130, #e2090d);
+  width: 100px;
+  height: 100px;
+  display: flex;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  z-index: 5;
+  position: absolute;
+  bottom: 3rem;
+  right: 3rem;
+}
+.cid-s7KviYfvdv .icon-wrap .mbr-iconfont {
+  font-size: 2.6rem;
+  color: white;
+  padding-left: 10px;
+}
+.cid-s7KviYfvdv H3 {
+  color: #787324;
+}
+.cid-s7KviYfvdv .mbr-section-title,
+.cid-s7KviYfvdv .title-wrapper {
+  color: #ffffff;
+}
+.cid-s7KviYfvdv .mbr-text,
+.cid-s7KviYfvdv .mbr-section-btn {
+  color: #999999;
+}
+.cid-s7KviYfvdv .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-s7KviYfvdv .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cid-s7KviYfvdv .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-s7KviYfvdv a.close {
+  position: absolute;
+  right: 4vw;
+  top: 4vh;
+  color: #ffffff;
+  z-index: 5000000;
+  font-size: 37px;
+  background: #000;
+  padding: 20px;
+  border-radius: 50%;
+}
+.cid-s7KviYfvdv a.close:hover {
+  color: #ffffff;
+}
 .cid-s1YMd28qy4 {
   padding-top: 15px;
   padding-bottom: 0px;
@@ -1347,120 +1505,161 @@ a {
 .cid-s1YMd28qy4 .main-text {
   color: #999999;
 }
-.cid-s651QFlLKn {
-  padding-top: 15px;
-  padding-bottom: 0px;
-  background-color: #000000;
+.cid-s7KvkuL1UK {
+  padding-top: 90px;
+  padding-bottom: 60px;
+  background-color: #111111;
 }
-.cid-s651QFlLKn .wrapper {
-  overflow: hidden;
+.cid-s7KvkuL1UK .mbr-section-subtitle {
+  color: #999999;
+  font-weight: 300;
+}
+.cid-s7KvkuL1UK .countdown {
+  font-weight: 600;
+}
+.cid-s7KvkuL1UK .number-wrap {
+  color: #ffffff;
+  border-color: rgba(255, 255, 255, 0.15);
   position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
 }
-.cid-s651QFlLKn .mbr-media {
-  z-index: 2;
-}
-.cid-s651QFlLKn .box {
-  height: 400px;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-}
-.cid-s651QFlLKn .box:before {
-  background-image: url("../../../assets/images/ht-1385x433.png");
-  background-size: cover;
-  background-position: center;
-  position: absolute;
-  content: '';
-  width: 100%;
-  transition: all 0.3s;
-  height: 100%;
-  left: 0;
-}
-.cid-s651QFlLKn .box:hover span {
-  transform: scale(1.2);
-}
-.cid-s651QFlLKn .box:hover:before {
-  filter: contrast(1.2) brightness(0.8);
-}
-.cid-s651QFlLKn .icon-wrap {
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-}
-.cid-s651QFlLKn .icon-wrap span {
-  padding-left: 4px;
-}
-.cid-s651QFlLKn .mbr-media span {
-  font-size: 6rem;
-  cursor: pointer;
-  position: relative;
-  display: flex;
-  transition: all 0.3s;
-  justify-content: center;
-  align-items: center;
-  opacity: 1;
+.cid-s7KvkuL1UK .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
   background: linear-gradient(to left, #fc5130, #e2090d);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.cid-s651QFlLKn .mbr-media span.mbri-play:before {
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-35%);
-  -moz-transform: translateX(-35%);
-  -ms-transform: translateX(-35%);
-  -o-transform: translateX(-35%);
-  transform: translateX(-35%);
+.cid-s7KvkuL1UK .period {
+  display: block;
+  padding-top: 2px;
 }
-.cid-s651QFlLKn .modalWindow {
-  position: fixed;
-  z-index: 5000;
-  left: 0;
-  top: 0;
-  background-color: rgba(61, 61, 61, 0.65);
-  width: 100%;
-  height: 100%;
+.cid-s7KvkuL1UK .dot {
+  display: none;
 }
-.cid-s651QFlLKn .modalWindow .modalWindow-container {
-  display: table-cell;
-  vertical-align: middle;
-}
-.cid-s651QFlLKn .modalWindow .modalWindow-video {
-  height: calc(44.9943757vw);
-  width: 80vw;
+.cid-s7KvkuL1UK .countdown-cont {
+  max-width: 1000px;
   margin: 0 auto;
 }
-.cid-s651QFlLKn a.close {
-  position: absolute;
-  right: 4vw;
-  top: 4vh;
-  color: #ffffff;
-  z-index: 5000000;
-  font-size: 37px;
-  background: #000;
-  padding: 20px;
-  border-radius: 50%;
-}
-.cid-s651QFlLKn a.close:hover {
-  color: #ffffff;
-}
-@media (max-width: 576px) {
-  .cid-s651QFlLKn .box {
-    height: 250px;
+@media (max-width: 768px) {
+  .cid-s7KvkuL1UK .dot {
+    display: none;
   }
 }
-.cid-s651QFlLKn .mbr-section-title {
+@media (max-width: 543px) {
+  .cid-s7KvkuL1UK .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-s7KvkuL1UK .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
+  }
+  .cid-s7KvkuL1UK .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-s7KvkuL1UK .number,
+  .cid-s7KvkuL1UK .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-s7KvkuL1UK .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-s7KvkuL1UK H2 {
   color: #ffffff;
 }
-.cid-s651QFlLKn H4 {
-  color: #000000;
-}
-.cid-s651QFlLKn P {
+.cid-s7KvkuL1UK .mbr-subtitle {
   color: #999999;
+}
+.cid-s7KvhnthHs {
+  padding-top: 30px;
+  padding-bottom: 90px;
+  background-color: #111111;
+}
+.cid-s7KvhnthHs img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.cid-s7KvhnthHs .container-fluid {
+  padding: 0;
+}
+.cid-s7KvhnthHs .card-wrapper {
+  background: #191919;
+  padding: 3rem;
+}
+.cid-s7KvhnthHs .card-wrapper:hover {
+  background: linear-gradient(to left, #fc5130, #e2090d);
+}
+.cid-s7KvhnthHs .text-wrap {
+  display: flex;
+  justify-content: center;
+  padding-top: 1rem;
+}
+.cid-s7KvhnthHs .icon-wrapper {
+  padding: 0 0.6rem;
+}
+.cid-s7KvhnthHs .card-box {
+  padding-top: 2rem;
+}
+.cid-s7KvhnthHs .link-icon {
+  font-size: 1.5rem;
+  background: linear-gradient(to left, #fc5130, #e2090d);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.cid-s7KvhnthHs .card-title {
+  color: #999999;
+}
+.cid-s7KvhnthHs .mbr-subtitle {
+  color: #ffffff;
+}
+.cid-s7KvhnthHs .main-title {
+  color: #ffffff;
+}
+.cid-s7KvhnthHs .main-subtitle {
+  color: #999999;
+}
+.cid-s7KvhnthHs .card {
+  margin-bottom: 2rem;
+  transition: all 0.3s;
+}
+.cid-s7KvhnthHs .card:hover {
+  transform: translateY(-10px);
+}
+.cid-s7KvhnthHs .card:hover .link-icon {
+  color: #ffffff;
+  -webkit-background-clip: transparent;
+  -webkit-text-fill-color: unset;
+}
+.cid-s7KvhnthHs .card:hover .card-title,
+.cid-s7KvhnthHs .card:hover .mbr-subtitle {
+  color: #ffffff !important;
+}
+@media (max-width: 1600px) {
+  .cid-s7KvhnthHs .card-wrapper {
+    padding: 3rem 1rem;
+  }
 }
 .cid-s6DlBh7Qsf {
   padding-top: 15px;
@@ -1577,28 +1776,104 @@ a {
 .cid-s6DlBh7Qsf P {
   color: #999999;
 }
-.cid-s65cIcpaD4 {
-  padding-top: 45px;
-  padding-bottom: 15px;
+.cid-s7Y7HstkRx {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  position: relative;
   background-color: #000000;
 }
-.cid-s65cIcpaD4 img {
+.cid-s7Y7HstkRx p {
+  color: #767676;
+  padding: 0;
+  letter-spacing: 0px;
+}
+.cid-s7Y7HstkRx .panel-title {
+  border-bottom: 2px solid #e2090d;
+  display: flex!important;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 2rem;
+}
+.cid-s7Y7HstkRx .collapsed {
+  border: none;
+}
+.cid-s7Y7HstkRx .collapsed span {
+  transform: rotate(0deg);
+}
+.cid-s7Y7HstkRx span {
+  font-size: 1.4rem;
+  transition: all 0.3s;
+  transform: rotate(45deg);
+  background: linear-gradient(to left, #fc5130, #e2090d);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 900;
+}
+.cid-s7Y7HstkRx .panel-body {
+  padding-top: 0.5rem;
+}
+.cid-s7Y7HstkRx .card {
+  border-radius: 0px;
+  margin-bottom: -1px;
+}
+.cid-s7Y7HstkRx .card .card-header {
+  border-radius: 0px;
+  margin: 0.5rem 0;
+  border: 0px;
+  background: #191919;
+  padding: 0;
+}
+.cid-s7Y7HstkRx .card .card-header a.panel-title {
+  margin-bottom: 0;
+  margin-top: -1px;
+  font-style: normal;
+  text-decoration: none !important;
+  line-height: normal;
+}
+.cid-s7Y7HstkRx .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
+}
+.cid-s7Y7HstkRx .card .card-header a.panel-title h4 {
+  padding: 1.3rem 2rem;
+  margin-bottom: 0;
+}
+.cid-s7Y7HstkRx .card .card-header a.panel-title h4 .sign {
+  padding-right: 1rem;
+}
+.cid-s7Y7HstkRx .panel-text {
+  color: #767676;
+}
+.cid-s7Y7HstkRx H4 {
+  color: #999999;
+}
+.cid-s7Y7HstkRx H2 {
+  color: #ffffff;
+}
+.cid-s7Y7HstkRx .mbr-section-text {
+  color: #999999;
+}
+.cid-s7KvlPtGlI {
+  padding-top: 90px;
+  padding-bottom: 75px;
+  background-color: #111111;
+}
+.cid-s7KvlPtGlI img {
   width: 100%;
   transition: all 0.6s ease-in-out;
   height: 260px;
   object-fit: cover;
 }
-.cid-s65cIcpaD4 .link-wrapper {
+.cid-s7KvlPtGlI .link-wrapper {
   margin-bottom: 1rem;
 }
-.cid-s65cIcpaD4 .link-wrapper .mbr-iconfont {
+.cid-s7KvlPtGlI .link-wrapper .mbr-iconfont {
   border: 1px solid #999999;
   border-radius: 50%;
   padding: 8px;
   font-size: 0.8rem;
   color: #999999;
 }
-.cid-s65cIcpaD4 .img-wrapper .mbr-iconfont {
+.cid-s7KvlPtGlI .img-wrapper .mbr-iconfont {
   font-size: 3rem;
   width: 80px;
   height: 80px;
@@ -1611,19 +1886,19 @@ a {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.cid-s65cIcpaD4 .card-wrapper {
+.cid-s7KvlPtGlI .card-wrapper {
   background: #191919;
   padding: 2rem;
 }
 @media (max-width: 767px) {
-  .cid-s65cIcpaD4 .card-wrapper {
+  .cid-s7KvlPtGlI .card-wrapper {
     padding: 2rem 1rem;
   }
 }
-.cid-s65cIcpaD4 .first:hover:before {
+.cid-s7KvlPtGlI .first:hover:before {
   content: none;
 }
-.cid-s65cIcpaD4 .first:before {
+.cid-s7KvlPtGlI .first:before {
   position: absolute;
   top: -1rem;
   z-index: -1;
@@ -1633,10 +1908,10 @@ a {
   background: linear-gradient(to left, #fc5130, #e2090d);
   content: '';
 }
-.cid-s65cIcpaD4 .last:hover:after {
+.cid-s7KvlPtGlI .last:hover:after {
   content: none;
 }
-.cid-s65cIcpaD4 .last:after {
+.cid-s7KvlPtGlI .last:after {
   position: absolute;
   bottom: -1rem;
   right: 0rem;
@@ -1646,34 +1921,34 @@ a {
   background: linear-gradient(to left, #fc5130, #e2090d);
   content: '';
 }
-.cid-s65cIcpaD4 .mbr-section-text {
+.cid-s7KvlPtGlI .mbr-section-text {
   color: #999999;
 }
-.cid-s65cIcpaD4 .card {
+.cid-s7KvlPtGlI .card {
   z-index: 1;
   min-height: 200px;
   margin-bottom: 2rem;
   position: relative;
   transition: all 0.3s;
 }
-.cid-s65cIcpaD4 .card .img-wrapper {
+.cid-s7KvlPtGlI .card .img-wrapper {
   overflow: hidden;
 }
-.cid-s65cIcpaD4 .card:hover {
+.cid-s7KvlPtGlI .card:hover {
   transform: translateY(-10px);
   cursor: pointer;
 }
-.cid-s65cIcpaD4 .card:hover .mbr-iconfont {
+.cid-s7KvlPtGlI .card:hover .mbr-iconfont {
   color: #ffffff !important;
   border-color: #ffffff;
   -webkit-background-clip: transparent;
   -webkit-text-fill-color: unset;
 }
-.cid-s65cIcpaD4 .card:hover .card-wrapper {
+.cid-s7KvlPtGlI .card:hover .card-wrapper {
   background: linear-gradient(to left, #fc5130, #e2090d);
   color: #ffffff !important;
 }
-.cid-s65cIcpaD4 .card:hover .card-wrapper .mbr-section-text {
+.cid-s7KvlPtGlI .card:hover .card-wrapper .mbr-section-text {
   color: #ffffff !important;
 }
 .cid-s65mrFIAUw {
