create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1625,13 +1625,13 @@ a {
   border-bottom: 1px solid #999999;
 }
 .cid-s7ZRzdyhSR .card1 {
-  background-image: url("../../../assets/images/tremendous-tiles-2-bnvg1zo9rw9y-large-2x-658x988.jpg");
+  background-image: url("../../../assets/images/tremendous-tiles-2-bnvg1zo9rw9y-large-2x-658x988.jpeg");
 }
 .cid-s7ZRzdyhSR .card2 {
   background-image: url("../../../assets/images/tremendous-tiles-9-lmwdhywc8j6u-large-2x-658x988.jpg");
 }
 .cid-s7ZRzdyhSR .card3 {
-  background-image: url("../../../assets/images/tremendous-tiles-8-f6tnmy2ddyqa-large-2x-658x988.jpg");
+  background-image: url("../../../assets/images/tremendous-tiles-8-f6tnmy2ddyqa-large-2x-658x988.jpeg");
 }
 .cid-s7ZRzdyhSR .link,
 .cid-s7ZRzdyhSR .card-box {
